--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
 
     </section>
   </main>
+<script>
+  document.querySelectorAll('.card, .contactcard').forEach(el => {
+    el.addEventListener('mousemove', (e) => {
+      const r = el.getBoundingClientRect();
+      el.style.setProperty('--x', (e.clientX - r.left) + 'px');
+      el.style.setProperty('--y', (e.clientY - r.top) + 'px');
+    });
+  });
+</script>
 
 </body>
 </html>
