--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <!-- LEFT PROFILE -->
     <aside class="left">
       <div class="profile">
-        <div class="avatar"></div>
+        <!-- Enhanced avatar with deep glow -->
+        <div class="avatar-container">
+          <div class="glow-ring glow-ring-1"></div>
+          <div class="glow-ring glow-ring-2"></div>
+          <div class="glow-ring glow-ring-3"></div>
+          <div class="avatar"></div>
+        </div>
 
-        <h1 class="name">Harshit Jain</h1>
-        <p class="role">Video Editor & Motion Graphics Artist <span>🎬</span></p>
+        <h1 class="name glow-text">Harshit Jain</h1>
+        <p class="role">Video Editor & Motion Graphics Artist <span class="emoji-glow">🎬</span></p>
 
         <p class="desc">Expert in Adobe After Effects & Premiere Pro</p>
         <p class="desc">
@@ -34,6 +40,7 @@
 
         <div class="cards two">
           <div class="card tall video-card">
+            <div class="card-glow"></div>
             <video 
               src="assets/motion-1.MP4"
               autoplay
@@ -44,6 +51,7 @@
           </div>
 
           <div class="card tall">
+            <div class="card-glow"></div>
             <div class="thumb gray">
               <p class="big">Starter Homes</p>
             </div>
@@ -57,10 +65,12 @@
 
         <div class="cards two">
           <div class="card tall">
+            <div class="card-glow"></div>
             <div class="thumb poster"></div>
           </div>
 
           <div class="card tall">
+            <div class="card-glow"></div>
             <div class="thumb map"></div>
           </div>
         </div>
@@ -72,9 +82,11 @@
 
         <div class="cards two smallcards">
           <div class="card square">
+            <div class="card-glow"></div>
             <div class="thumb logo1"></div>
           </div>
           <div class="card square">
+            <div class="card-glow"></div>
             <div class="thumb logo2"></div>
           </div>
         </div>
@@ -86,9 +98,11 @@
 
         <div class="cards two widecards">
           <div class="card wide">
+            <div class="card-glow"></div>
             <div class="thumb yt1"></div>
           </div>
           <div class="card wide dark">
+            <div class="card-glow"></div>
             <div class="thumb yt2"></div>
           </div>
         </div>
@@ -100,6 +114,7 @@
 
         <div class="cards one">
           <div class="card wide">
+            <div class="card-glow"></div>
             <div class="thumb titleanim"></div>
           </div>
         </div>
@@ -111,18 +126,22 @@
 
         <div class="cards four">
           <div class="card tall">
+            <div class="card-glow"></div>
             <div class="thumb clinic1"></div>
           </div>
           <div class="card tall">
+            <div class="card-glow"></div>
             <div class="thumb whitecard">
               <p class="big">Edited 200+</p>
               <p class="small">Videos for creators, brands and agencies.</p>
             </div>
           </div>
           <div class="card tall">
+            <div class="card-glow"></div>
             <div class="thumb clinic2"></div>
           </div>
           <div class="card tall">
+            <div class="card-glow"></div>
             <div class="thumb clinic3"></div>
           </div>
         </div>
@@ -130,10 +149,11 @@
 
       <!-- CONTACT -->
       <div class="section">
-        <h2 class="title">CONTACT - Let’s Work Together 🤝</h2>
+        <h2 class="title">CONTACT - Let's Work Together 🤝</h2>
 
         <div class="cards contactgrid">
           <a class="contactcard" href="#" target="_blank">
+            <div class="contact-glow"></div>
             <div class="icon">in</div>
             <div>
               <p class="cname">Harshit Jain</p>
@@ -142,6 +162,7 @@
           </a>
 
           <a class="contactcard" href="#" target="_blank">
+            <div class="contact-glow"></div>
             <div class="icon green">wa</div>
             <div>
               <p class="cname">Harshit Jain</p>
@@ -150,6 +171,7 @@
           </a>
 
           <a class="contactcard" href="#" target="_blank">
+            <div class="contact-glow"></div>
             <div class="icon ig">ig</div>
             <div>
               <p class="cname">harshit_yati7</p>
@@ -158,6 +180,7 @@
           </a>
 
           <div class="contactcard mapcard">
+            <div class="contact-glow"></div>
             <div class="mapmini">
               <p>Indore, India</p>
             </div>
