--- a/index.html
+++ b/index.html
@@ -13,16 +13,10 @@
     <!-- LEFT PROFILE -->
     <aside class="left">
       <div class="profile">
-        <!-- Enhanced avatar with deep glow -->
-        <div class="avatar-container">
-          <div class="glow-ring glow-ring-1"></div>
-          <div class="glow-ring glow-ring-2"></div>
-          <div class="glow-ring glow-ring-3"></div>
-          <div class="avatar"></div>
-        </div>
+        <div class="avatar"></div>
 
-        <h1 class="name glow-text">Harshit Jain</h1>
-        <p class="role">Video Editor & Motion Graphics Artist <span class="emoji-glow">🎬</span></p>
+        <h1 class="name">Harshit Jain</h1>
+        <p class="role">Video Editor & Motion Graphics Artist <span>🎬</span></p>
 
         <p class="desc">Expert in Adobe After Effects & Premiere Pro</p>
         <p class="desc">
@@ -40,7 +34,6 @@
 
         <div class="cards two">
           <div class="card tall video-card">
-            <div class="card-glow"></div>
             <video 
               src="assets/motion-1.MP4"
               autoplay
@@ -51,7 +44,6 @@
           </div>
 
           <div class="card tall">
-            <div class="card-glow"></div>
             <div class="thumb gray">
               <p class="big">Starter Homes</p>
             </div>
@@ -65,12 +57,10 @@
 
         <div class="cards two">
           <div class="card tall">
-            <div class="card-glow"></div>
             <div class="thumb poster"></div>
           </div>
 
           <div class="card tall">
-            <div class="card-glow"></div>
             <div class="thumb map"></div>
           </div>
         </div>
@@ -82,11 +72,9 @@
 
         <div class="cards two smallcards">
           <div class="card square">
-            <div class="card-glow"></div>
             <div class="thumb logo1"></div>
           </div>
           <div class="card square">
-            <div class="card-glow"></div>
             <div class="thumb logo2"></div>
           </div>
         </div>
@@ -98,11 +86,9 @@
 
         <div class="cards two widecards">
           <div class="card wide">
-            <div class="card-glow"></div>
             <div class="thumb yt1"></div>
           </div>
           <div class="card wide dark">
-            <div class="card-glow"></div>
             <div class="thumb yt2"></div>
           </div>
         </div>
@@ -114,7 +100,6 @@
 
         <div class="cards one">
           <div class="card wide">
-            <div class="card-glow"></div>
             <div class="thumb titleanim"></div>
           </div>
         </div>
@@ -126,22 +111,18 @@
 
         <div class="cards four">
           <div class="card tall">
-            <div class="card-glow"></div>
             <div class="thumb clinic1"></div>
           </div>
           <div class="card tall">
-            <div class="card-glow"></div>
             <div class="thumb whitecard">
               <p class="big">Edited 200+</p>
               <p class="small">Videos for creators, brands and agencies.</p>
             </div>
           </div>
           <div class="card tall">
-            <div class="card-glow"></div>
             <div class="thumb clinic2"></div>
           </div>
           <div class="card tall">
-            <div class="card-glow"></div>
             <div class="thumb clinic3"></div>
           </div>
         </div>
@@ -149,11 +130,10 @@
 
       <!-- CONTACT -->
       <div class="section">
-        <h2 class="title">CONTACT - Let's Work Together 🤝</h2>
+        <h2 class="title">CONTACT - Let’s Work Together 🤝</h2>
 
         <div class="cards contactgrid">
           <a class="contactcard" href="#" target="_blank">
-            <div class="contact-glow"></div>
             <div class="icon">in</div>
             <div>
               <p class="cname">Harshit Jain</p>
@@ -162,7 +142,6 @@
           </a>
 
           <a class="contactcard" href="#" target="_blank">
-            <div class="contact-glow"></div>
             <div class="icon green">wa</div>
             <div>
               <p class="cname">Harshit Jain</p>
@@ -171,7 +150,6 @@
           </a>
 
           <a class="contactcard" href="#" target="_blank">
-            <div class="contact-glow"></div>
             <div class="icon ig">ig</div>
             <div>
               <p class="cname">harshit_yati7</p>
@@ -180,7 +158,6 @@
           </a>
 
           <div class="contactcard mapcard">
-            <div class="contact-glow"></div>
             <div class="mapmini">
               <p>Indore, India</p>
             </div>
