--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
             </video>
           </div>
 
-          <div class="card tall">
-            <div class="thumb gray">
-              <p class="big">Starter Homes</p>
-            </div>
-          </div>
-        </div>
-      </div>
+          <div class="card tall video-card">
+  <video
+    src="assets/motion-2.mp4"
+    autoplay
+    muted
+    loop
+    playsinline>
+  </video>
+</div>
 
       <!-- SECTION 2 -->
       <div class="section">
