--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="section">
         <h2 class="title">Premium & Clean Motion Graphics</h2>
 
-        <div class="cards two">
+        <div class="cards three">
           <div class="card tall video-card">
             <video 
               src="assets/motion-1.MP4"
@@ -46,6 +46,16 @@
           <div class="card tall video-card">
   <video
     src="assets/motion-2.mp4"
+    autoplay
+    muted
+    loop
+    playsinline>
+  </video>
+</div>
+
+          <div class="card tall video-card">
+  <video
+    src="assets/motion-3.mp4"
     autoplay
     muted
     loop
