--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="section">
         <h2 class="title">Premium & Clean Motion Graphics</h2>
 
-        <div class="cards three">
+        <div class="cards two">
           <div class="card tall video-card">
             <video 
               src="assets/motion-1.MP4"
