--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <!-- SECTION 2 -->
       <div class="section">
-        <h2 class="title">Documentary Style & Map Animations</h2>
+        <h2 class="title">SaaS Motion Graphics</h2>
 
         <div class="cards two">
           <div class="card tall">
