--- a/index.html
+++ b/index.html
@@ -58,8 +58,14 @@
         <h2 class="title">SaaS Motion Graphics</h2>
 
         <div class="cards two">
-          <div class="card tall">
-            <div class="thumb poster"></div>
+          <div class="card tall video-card">
+            <video 
+              src="assets/motion-3.MP4"
+              autoplay
+              muted
+              loop
+              playsinline>
+            </video>
           </div>
 
           <div class="card tall">
