--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     playsinline>
   </video>
 </div>
-
+</div>
+        
       <!-- SECTION 2 -->
       <div class="section">
         <h2 class="title">SaaS Motion Graphics</h2>
