--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
         <h2 class="title">Premium & Clean Motion Graphics</h2>
 
         <div class="cards two">
-          <div class="card tall">
-            <div class="thumb gray">
-              <p class="small">they are not selling an</p>
-              <p class="big">Energy Drink</p>
-            </div>
-          </div>
+          <div class="card tall video-card">
+            <video
+             src="assets/motion-1.MP4"
+             autoplay
+             muted
+             loop
+             playsinline>
+           </video>
+         </div>
+       </div>
 
           <div class="card tall">
             <div class="thumb gray">
