--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
        </div>
 
           <div class="card tall">
-            <div class="thumb gray">
-              <p class="big">Starter Homes</p> 
-            </div>
-          </div>
-        </div>
-      </div>
+            <div class="card tall video-card">
+              <video
+             src="assets/motion-2.MP4"
+             autoplay
+             muted
+             loop
+             playsinline>
+           </video>
+         </div>
+       </div>
         
       <!-- SECTION 2 -->
       <div class="section">
