--- a/index.html
+++ b/index.html
@@ -45,16 +45,12 @@
        </div>
 
           <div class="card tall">
-            <div class="card tall video-card">
-              <video
-             src="assets/motion-2.MP4"
-             autoplay
-             muted
-             loop
-             playsinline>
-           </video>
-         </div>
-       </div>
+            <div class="thumb gray">
+              <p class="big">Starter Homes</p>
+            </div>
+          </div>
+        </div>
+      </div>
         
       <!-- SECTION 2 -->
       <div class="section">
