--- a/index.html
+++ b/index.html
@@ -29,28 +29,35 @@
     <section class="right">
 
       <!-- SECTION 1 -->
-      <div class="section">
-        <h2 class="title">Premium & Clean Motion Graphics</h2>
+<div class="section">
+  <h2 class="title">Premium & Clean Motion Graphics</h2>
 
-        <div class="cards two">
-          <div class="card tall video-card">
-            <video
-             src="assets/motion-1.MP4"
-             autoplay
-             muted
-             loop
-             playsinline>
-           </video>
-         </div>
-       </div>
+  <div class="cards two">
 
-          <div class="card tall">
-            <div class="thumb gray">
-              <p class="big">Starter Homes</p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <!-- Video 1 -->
+    <div class="card tall video-card">
+      <video
+        src="assets/motion-1.MP4"
+        autoplay
+        muted
+        loop
+        playsinline>
+      </video>
+    </div>
+
+    <!-- Video 2 -->
+    <div class="card tall video-card">
+      <video
+        src="assets/motion-2.MP4"
+        autoplay
+        muted
+        loop
+        playsinline>
+      </video>
+    </div>
+  </div>
+</div>
+
         
       <!-- SECTION 2 -->
       <div class="section">
