Change section title and add video card
Updated section title and added a video card with autoplay functionality.

--- a/index.html
+++ b/index.html
@@ -61,12 +61,17 @@
         
       <!-- SECTION 2 -->
       <div class="section">
-        <h2 class="title">Documentary Style & Map Animations</h2>
+        <h2 class="title">SaaS Motion Graphics</h2>
 
-        <div class="cards two">
-          <div class="card tall">
-            <div class="thumb poster"></div>
-          </div>
+        <div class="card tall video-card">
+          <video
+            src="assets/doc-1.MP4"
+            autoplay
+            muted
+            loop
+            playsinline>
+          </video>
+        </div>
 
           <div class="card tall">
             <div class="thumb map"></div>
