--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
       <div class="cards two">
         <div class="card tall">
-          <video src="assets/video1.mp4" muted autoplay loop playsinline></video>
+          <video src="assets/motion-1.mp4" muted autoplay loop playsinline></video>
         </div>
         <div class="card tall">
-          <video src="assets/video2.mp4" muted autoplay loop playsinline></video>
+          <video src="assets/motion-2.mp4" muted autoplay loop playsinline></video>
         </div>
       </div>
     </div>
