--- a/index.html
+++ b/index.html
@@ -2,177 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Harshit Jain — Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
-  <main class="wrap">
+<main class="wrap">
 
-    <!-- LEFT PROFILE -->
-    <aside class="left">
-      <div class="profile">
-        <div class="avatar"></div>
+  <aside class="left">
+    <div class="profile">
+      <div class="avatar"></div>
+      <h1>Harshit Jain</h1>
+      <p class="role">Video Editor & Motion Graphics Artist</p>
+    </div>
+  </aside>
 
-        <h1 class="name">Harshit Jain</h1>
-        <p class="role">Video Editor & Motion Graphics Artist <span>🎬</span></p>
+  <section class="right">
 
-        <p class="desc">Expert in Adobe After Effects & Premiere Pro</p>
-        <p class="desc">
-          I help brands & creators tell stories through high-impact edits & motion design
-        </p>
-      </div>
-    </aside>
+    <!-- SECTION TEMPLATE -->
+    <div class="section">
+      <h2 class="title">Premium & Clean Motion Graphics</h2>
 
-    <!-- RIGHT CONTENT -->
-    <section class="right">
-
-      <!-- SECTION 1 -->
-      <div class="section">
-        <h2 class="title">Premium & Clean Motion Graphics</h2>
-
-        <div class="card tall video-card">
-          <video 
-            src="assets/motion-1.MP4"
-              autoplay
-              muted
-              loop
-              playsinline>
-            </video>
-          </div>
-
-        <div class="card tall video-card">
-          <video 
-            src="assets/motion-2.MP4"
-              autoplay
-              muted
-              loop
-              playsinline>
-            </video>
-          </div>
-
-      <!-- SECTION 2 -->
-      <div class="section">
-        <h2 class="title">SaaS Motion Graphics</h2>
-
-        <div class="card tall video-card">
-          <video 
-            src="assets/motion-3.MP4"
-              autoplay
-              muted
-              loop
-              playsinline>
-            </video>
-          </div>
-
-          <div class="card tall">
-            <div class="thumb map"></div>
-          </div>
+      <div class="cards two">
+        <div class="card tall">
+          <video src="assets/video1.mp4" muted autoplay loop playsinline></video>
+        </div>
+        <div class="card tall">
+          <video src="assets/video2.mp4" muted autoplay loop playsinline></video>
         </div>
       </div>
+    </div>
 
-      <!-- SECTION 3 -->
-      <div class="section">
-        <h2 class="title">Logo Animations</h2>
+    <!-- ADD NEW SECTION BY COPYING ABOVE BLOCK -->
 
-        <div class="cards two smallcards">
-          <div class="card square">
-            <div class="thumb logo1"></div>
-          </div>
-          <div class="card square">
-            <div class="thumb logo2"></div>
-          </div>
-        </div>
-      </div>
-
-      <!-- SECTION 4 -->
-      <div class="section">
-        <h2 class="title">Youtube & Long Form Content</h2>
-
-        <div class="cards two widecards">
-          <div class="card wide">
-            <div class="thumb yt1"></div>
-          </div>
-          <div class="card wide dark">
-            <div class="thumb yt2"></div>
-          </div>
-        </div>
-      </div>
-
-      <!-- SECTION 5 -->
-      <div class="section">
-        <h2 class="title">Title Animations</h2>
-
-        <div class="cards one">
-          <div class="card wide">
-            <div class="thumb titleanim"></div>
-          </div>
-        </div>
-      </div>
-
-      <!-- SECTION 6 -->
-      <div class="section">
-        <h2 class="title">Clinic Content</h2>
-
-        <div class="cards four">
-          <div class="card tall">
-            <div class="thumb clinic1"></div>
-          </div>
-          <div class="card tall">
-            <div class="thumb whitecard">
-              <p class="big">Edited 200+</p>
-              <p class="small">Videos for creators, brands and agencies.</p>
-            </div>
-          </div>
-          <div class="card tall">
-            <div class="thumb clinic2"></div>
-          </div>
-          <div class="card tall">
-            <div class="thumb clinic3"></div>
-          </div>
-        </div>
-      </div>
-
-      <!-- CONTACT -->
-      <div class="section">
-        <h2 class="title">CONTACT - Let’s Work Together 🤝</h2>
-
-        <div class="cards contactgrid">
-          <a class="contactcard" href="#" target="_blank">
-            <div class="icon">in</div>
-            <div>
-              <p class="cname">Harshit Jain</p>
-              <p class="csub">linkedin.com</p>
-            </div>
-          </a>
-
-          <a class="contactcard" href="#" target="_blank">
-            <div class="icon green">wa</div>
-            <div>
-              <p class="cname">Harshit Jain</p>
-              <p class="csub">WhatsApp</p>
-            </div>
-          </a>
-
-          <a class="contactcard" href="#" target="_blank">
-            <div class="icon ig">ig</div>
-            <div>
-              <p class="cname">harshit_yati7</p>
-              <p class="csub">Instagram</p>
-            </div>
-          </a>
-
-          <div class="contactcard mapcard">
-            <div class="mapmini">
-              <p>Indore, India</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </section>
-  </main>
+  </section>
+</main>
 
 </body>
 </html>
