--- a/index.html
+++ b/index.html
@@ -3,164 +3,338 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Harshit Jain — Portfolio</title>
+  <title>Harshit Jain – Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <main class="wrap">
 
-    <!-- LEFT PROFILE -->
+    <!-- ============================================================
+         LEFT SIDEBAR — Your name, role, and description
+         Change the text between the tags to update your info
+    ============================================================ -->
     <aside class="left">
       <div class="profile">
+
+        <!-- Profile picture: put your photo at assets/profile.jpg -->
         <div class="avatar"></div>
 
         <h1 class="name">Harshit Jain</h1>
-        <p class="role">Video Editor & Motion Graphics Artist <span>🎬</span></p>
-
+        <p class="role">Video Editor & Motion Graphics Artist 🎬</p>
         <p class="desc">Expert in Adobe After Effects & Premiere Pro</p>
-        <p class="desc">
-          I help brands & creators tell stories through high-impact edits & motion design
-        </p>
+        <p class="desc">I help brands & creators tell stories through high-impact edits & motion design</p>
+
       </div>
     </aside>
 
-    <!-- RIGHT CONTENT -->
+
+    <!-- ============================================================
+         RIGHT CONTENT — All your portfolio sections go here
+         To ADD a new section: copy any "section block" below and paste it
+         To REMOVE a section: delete the entire <!-- SECTION --> block
+    ============================================================ -->
     <section class="right">
 
-      <!-- SECTION 1 -->
+
+      <!-- ══════════════════════════════════════════════════════════
+           SECTION 1 — Premium & Clean Motion Graphics
+           These are VERTICAL (9:16) cards
+           HOW TO ADD VIDEO:
+             1. Upload your .mp4 file to GitHub in the "assets/videos/" folder
+             2. Replace   assets/videos/YOUR-VIDEO-NAME.mp4   with your file name
+             3. The poster="" is a thumbnail image shown before video plays (optional)
+                Upload a thumbnail jpg and replace assets/thumbs/YOUR-THUMB.jpg
+      ══════════════════════════════════════════════════════════ -->
       <div class="section">
         <h2 class="title">Premium & Clean Motion Graphics</h2>
 
         <div class="cards two">
-          <div class="card tall">
-            <div class="thumb gray">
-              <p class="small">they are not selling an</p>
-              <p class="big">Energy Drink</p>
-            </div>
+
+          <!-- VERTICAL CARD 1 -->
+          <div class="card vertical">
+            <video
+              src="assets/videos/energy-drink.mp4"
+              poster="assets/thumbs/energy-drink-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
 
-          <div class="card tall">
-            <div class="thumb gray">
-              <p class="big">Starter Homes</p>
-            </div>
+          <!-- VERTICAL CARD 2 -->
+          <div class="card vertical">
+            <video
+              src="assets/videos/starter-homes.mp4"
+              poster="assets/thumbs/starter-homes-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
+
         </div>
       </div>
+      <!-- END SECTION 1 -->
 
-      <!-- SECTION 2 -->
+
+      <!-- ══════════════════════════════════════════════════════════
+           SECTION 2 — Documentary Style & Map Animations
+           These are also VERTICAL (9:16) cards
+      ══════════════════════════════════════════════════════════ -->
       <div class="section">
         <h2 class="title">Documentary Style & Map Animations</h2>
 
         <div class="cards two">
-          <div class="card tall">
-            <div class="thumb poster"></div>
+
+          <!-- VERTICAL CARD 1 -->
+          <div class="card vertical">
+            <video
+              src="assets/videos/documentary-1.mp4"
+              poster="assets/thumbs/documentary-1-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
 
-          <div class="card tall">
-            <div class="thumb map"></div>
+          <!-- VERTICAL CARD 2 -->
+          <div class="card vertical">
+            <video
+              src="assets/videos/map-animation-1.mp4"
+              poster="assets/thumbs/map-animation-1-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
+
         </div>
       </div>
+      <!-- END SECTION 2 -->
 
-      <!-- SECTION 3 -->
+
+      <!-- ══════════════════════════════════════════════════════════
+           SECTION 3 — Logo Animations
+           These are SQUARE cards (1:1 ratio)
+      ══════════════════════════════════════════════════════════ -->
       <div class="section">
         <h2 class="title">Logo Animations</h2>
 
-        <div class="cards two smallcards">
+        <div class="cards two">
+
+          <!-- SQUARE CARD 1 -->
           <div class="card square">
-            <div class="thumb logo1"></div>
+            <video
+              src="assets/videos/logo-1.mp4"
+              poster="assets/thumbs/logo-1-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
+
+          <!-- SQUARE CARD 2 -->
           <div class="card square">
-            <div class="thumb logo2"></div>
+            <video
+              src="assets/videos/logo-2.mp4"
+              poster="assets/thumbs/logo-2-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
+
         </div>
       </div>
+      <!-- END SECTION 3 -->
 
-      <!-- SECTION 4 -->
+
+      <!-- ══════════════════════════════════════════════════════════
+           SECTION 4 — Youtube & Long Form Content
+           These are HORIZONTAL (16:9) cards
+      ══════════════════════════════════════════════════════════ -->
       <div class="section">
         <h2 class="title">Youtube & Long Form Content</h2>
 
-        <div class="cards two widecards">
-          <div class="card wide">
-            <div class="thumb yt1"></div>
+        <div class="cards two">
+
+          <!-- HORIZONTAL CARD 1 -->
+          <div class="card horizontal">
+            <video
+              src="assets/videos/youtube-1.mp4"
+              poster="assets/thumbs/youtube-1-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
-          <div class="card wide dark">
-            <div class="thumb yt2"></div>
+
+          <!-- HORIZONTAL CARD 2 -->
+          <div class="card horizontal">
+            <video
+              src="assets/videos/youtube-2.mp4"
+              poster="assets/thumbs/youtube-2-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
+
         </div>
       </div>
+      <!-- END SECTION 4 -->
 
-      <!-- SECTION 5 -->
+
+      <!-- ══════════════════════════════════════════════════════════
+           SECTION 5 — Title Animations
+           This is ONE wide HORIZONTAL card
+      ══════════════════════════════════════════════════════════ -->
       <div class="section">
         <h2 class="title">Title Animations</h2>
 
         <div class="cards one">
-          <div class="card wide">
-            <div class="thumb titleanim"></div>
+
+          <!-- SINGLE WIDE CARD -->
+          <div class="card horizontal">
+            <video
+              src="assets/videos/title-animation.mp4"
+              poster="assets/thumbs/title-animation-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
+
         </div>
       </div>
+      <!-- END SECTION 5 -->
 
-      <!-- SECTION 6 -->
+
+      <!-- ══════════════════════════════════════════════════════════
+           SECTION 6 — Clinic Content
+           Mix of VERTICAL cards + a stats card
+           The "stats card" is the white card with "Edited 200+"
+           You can change those numbers directly in the HTML below
+      ══════════════════════════════════════════════════════════ -->
       <div class="section">
         <h2 class="title">Clinic Content</h2>
 
         <div class="cards four">
-          <div class="card tall">
-            <div class="thumb clinic1"></div>
+
+          <!-- VERTICAL CARD 1 -->
+          <div class="card vertical">
+            <video
+              src="assets/videos/clinic-1.mp4"
+              poster="assets/thumbs/clinic-1-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
-          <div class="card tall">
-            <div class="thumb whitecard">
-              <p class="big">Edited 200+</p>
-              <p class="small">Videos for creators, brands and agencies.</p>
-            </div>
+
+          <!-- STATS CARD — change the text here -->
+          <div class="card vertical stats-card">
+            <p class="stats-number">Edited 200+</p>
+            <p class="stats-sub">Videos for creators, brands and agencies.</p>
           </div>
-          <div class="card tall">
-            <div class="thumb clinic2"></div>
+
+          <!-- VERTICAL CARD 2 -->
+          <div class="card vertical">
+            <video
+              src="assets/videos/clinic-2.mp4"
+              poster="assets/thumbs/clinic-2-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
           </div>
-          <div class="card tall">
-            <div class="thumb clinic3"></div>
+
+          <!-- VERTICAL CARD 3 -->
+          <div class="card vertical">
+            <video
+              src="assets/videos/clinic-3.mp4"
+              poster="assets/thumbs/clinic-3-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
+          </div>
+
+        </div>
+      </div>
+      <!-- END SECTION 6 -->
+
+
+      <!-- ══════════════════════════════════════════════════════════
+           HOW TO ADD A BRAND NEW SECTION:
+           1. Copy the block below (between the dashed lines)
+           2. Paste it above the CONTACT section
+           3. Change the title and video file names
+      - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+      <div class="section">
+        <h2 class="title">YOUR SECTION TITLE HERE</h2>
+        <div class="cards two">
+          <div class="card vertical">
+            <video src="assets/videos/YOUR-VIDEO.mp4" controls playsinline preload="none"></video>
+          </div>
+          <div class="card vertical">
+            <video src="assets/videos/YOUR-VIDEO-2.mp4" controls playsinline preload="none"></video>
           </div>
         </div>
       </div>
+      - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+      ══════════════════════════════════════════════════════════ -->
 
-      <!-- CONTACT -->
+
+      <!-- ══════════════════════════════════════════════════════════
+           CONTACT SECTION
+           Replace the href="#" with your actual links:
+             LinkedIn:  https://www.linkedin.com/in/YOUR-USERNAME
+             WhatsApp:  https://wa.me/91XXXXXXXXXX  (your number with country code)
+             Instagram: https://instagram.com/harshit_yati7
+      ══════════════════════════════════════════════════════════ -->
       <div class="section">
-        <h2 class="title">CONTACT - Let’s Work Together 🤝</h2>
+        <h2 class="title">CONTACT — Let's Work Together 🤝</h2>
 
         <div class="cards contactgrid">
-          <a class="contactcard" href="#" target="_blank">
-            <div class="icon">in</div>
+
+          <!-- LinkedIn — replace href with your LinkedIn URL -->
+          <a class="contactcard" href="https://www.linkedin.com/in/YOUR-USERNAME" target="_blank">
+            <div class="icon linkedin">in</div>
             <div>
               <p class="cname">Harshit Jain</p>
               <p class="csub">linkedin.com</p>
             </div>
           </a>
 
-          <a class="contactcard" href="#" target="_blank">
-            <div class="icon green">wa</div>
+          <!-- WhatsApp — replace 91XXXXXXXXXX with your number -->
+          <a class="contactcard" href="https://wa.me/91XXXXXXXXXX" target="_blank">
+            <div class="icon whatsapp">wa</div>
             <div>
               <p class="cname">Harshit Jain</p>
               <p class="csub">WhatsApp</p>
             </div>
           </a>
 
-          <a class="contactcard" href="#" target="_blank">
-            <div class="icon ig">ig</div>
+          <!-- Instagram — replace with your Instagram URL -->
+          <a class="contactcard" href="https://instagram.com/harshit_yati7" target="_blank">
+            <div class="icon instagram">ig</div>
             <div>
               <p class="cname">harshit_yati7</p>
               <p class="csub">Instagram</p>
             </div>
           </a>
 
-          <div class="contactcard mapcard">
-            <div class="mapmini">
-              <p>Indore, India</p>
-            </div>
+          <!-- Location card — change the city if needed -->
+          <div class="contactcard locationcard">
+            <p class="location-text">📍 Indore, India</p>
           </div>
+
         </div>
       </div>
+      <!-- END CONTACT -->
+
 
     </section>
   </main>
