--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <!-- VERTICAL CARD 1 -->
           <div class="card vertical">
             <video
-              src="assets/videos/energy-drink.mp4"
+              src="assets/energy-drink.mp4"
               poster="assets/thumbs/energy-drink-thumb.jpg"
               controls
               playsinline
@@ -65,7 +65,7 @@
           <!-- VERTICAL CARD 2 -->
           <div class="card vertical">
             <video
-              src="assets/videos/starter-homes.mp4"
+              src="assets/starter-homes.mp4"
               poster="assets/thumbs/starter-homes-thumb.jpg"
               controls
               playsinline
@@ -90,7 +90,7 @@
           <!-- VERTICAL CARD 1 -->
           <div class="card vertical">
             <video
-              src="assets/videos/documentary-1.mp4"
+              src="assets/documentary-1.mp4"
               poster="assets/thumbs/documentary-1-thumb.jpg"
               controls
               playsinline
