--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="card vertical">
             <video
               src="assets/energy-drink.mp4"
-              poster="assets/thumbs/energy-drink-thumb.jpg"
+              poster="assets/energy-drink-thumb.jpg"
               controls
               playsinline
               preload="none"
@@ -66,7 +66,7 @@
           <div class="card vertical">
             <video
               src="assets/starter-homes.mp4"
-              poster="assets/thumbs/starter-homes-thumb.jpg"
+              poster="assets/starter-homes-thumb.jpg"
               controls
               playsinline
               preload="none"
@@ -83,7 +83,7 @@
            These are also VERTICAL (9:16) cards
       ══════════════════════════════════════════════════════════ -->
       <div class="section">
-        <h2 class="title">Documentary Style & Map Animations</h2>
+        <h2 class="title">SaaS Motion Graphics</h2>
 
         <div class="cards two">
 
@@ -91,7 +91,7 @@
           <div class="card vertical">
             <video
               src="assets/documentary-1.mp4"
-              poster="assets/thumbs/documentary-1-thumb.jpg"
+              poster="assets/documentary-1-thumb.jpg"
               controls
               playsinline
               preload="none"
