--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
            These are HORIZONTAL (16:9) cards
       ══════════════════════════════════════════════════════════ -->
       <div class="section">
-        <h2 class="title">Youtube & Long Form Content</h2>
+        <h2 class="title">SaaS Motion Graphics</h2>
 
         <div class="cards two">
 
           <!-- HORIZONTAL CARD 1 -->
           <div class="card horizontal">
             <video
-              src="assets/videos/youtube-1.mp4"
-              poster="assets/thumbs/youtube-1-thumb.jpg"
+              src="assets/youtube-1.mp4"
+              poster="assets/youtube-1-thumb.jpg"
               controls
               playsinline
               preload="none"
