--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
           <!-- VERTICAL CARD 2 -->
           <div class="card vertical">
             <video
-              src="assets/videos/map-animation-1.mp4"
-              poster="assets/thumbs/map-animation-1-thumb.jpg"
+              src="assets/map-animation-1.mp4"
+              poster="assets/map-animation-1-thumb.jpg"
               controls
               playsinline
               preload="none"
