--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <!-- SQUARE CARD 1 -->
           <div class="card square">
             <video
-              src="assets/videos/logo-1.mp4"
-              poster="assets/thumbs/logo-1-thumb.jpg"
+              src="assets/logo-1.mp4"
+              poster="assets/logo-1-thumb.jpg"
               controls
               playsinline
               preload="none"
