--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           <!-- SQUARE CARD 2 -->
           <div class="card square">
             <video
-              src="assets/videos/logo-2.mp4"
-              poster="assets/thumbs/logo-2-thumb.jpg"
+              src="assets/logo-2.mp4"
+              poster="assets/logo-2-thumb.jpg"
               controls
               playsinline
               preload="none"
