--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
           <!-- HORIZONTAL CARD 2 -->
           <div class="card horizontal">
             <video
-              src="assets/videos/youtube-2.mp4"
-              poster="assets/thumbs/youtube-2-thumb.jpg"
+              src="assets/youtube-2.mp4"
+              poster="assets/youtube-2-thumb.jpg"
               controls
               playsinline
               preload="none"
