--- a/index.html
+++ b/index.html
@@ -191,15 +191,15 @@
            This is ONE wide HORIZONTAL card
       ══════════════════════════════════════════════════════════ -->
       <div class="section">
-        <h2 class="title">Title Animations</h2>
+        <h2 class="title">Youtube Documentary Style</h2>
 
         <div class="cards one">
 
           <!-- SINGLE WIDE CARD -->
           <div class="card horizontal">
             <video
-              src="assets/videos/title-animation.mp4"
-              poster="assets/thumbs/title-animation-thumb.jpg"
+              src="assets/title-animation.mp4"
+              poster="assets/title-animation-thumb.jpg"
               controls
               playsinline
               preload="none"
