--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
           <!-- VERTICAL CARD 1 -->
           <div class="card vertical">
             <video
-              src="assets/videos/clinic-1.mp4"
-              poster="assets/thumbs/clinic-1-thumb.jpg"
+              src="assets/clinic-1.mp4"
+              poster="assets/clinic-1-thumb.jpg"
               controls
               playsinline
               preload="none"
