--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
            You can change those numbers directly in the HTML below
       ══════════════════════════════════════════════════════════ -->
       <div class="section">
-        <h2 class="title">Clinic Content</h2>
+        <h2 class="title">Content</h2>
 
         <div class="cards four">
 
