--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
           <!-- VERTICAL CARD 2 -->
           <div class="card vertical">
             <video
-              src="assets/videos/clinic-2.mp4"
-              poster="assets/thumbs/clinic-2-thumb.jpg"
+              src="assets/clinic-2.mp4"
+              poster="assets/clinic-2-thumb.jpg"
               controls
               playsinline
               preload="none"
@@ -253,8 +253,8 @@
           <!-- VERTICAL CARD 3 -->
           <div class="card vertical">
             <video
-              src="assets/videos/clinic-3.mp4"
-              poster="assets/thumbs/clinic-3-thumb.jpg"
+              src="assets/clinic-3.mp4"
+              poster="assets/clinic-3-thumb.jpg"
               controls
               playsinline
               preload="none"
