--- a/index.html
+++ b/index.html
@@ -233,10 +233,15 @@
             ></video>
           </div>
 
-          <!-- STATS CARD — change the text here -->
-          <div class="card vertical stats-card">
-            <p class="stats-number">Edited 200+</p>
-            <p class="stats-sub">Videos for creators, brands and agencies.</p>
+          <!-- VERTICAL CARD 4 -->
+          <div class="card vertical">
+             <video
+               src="assets/clinic-4.mp4"
+               poster="assets/clinic-4-thumb.jpg"
+               controls
+               playsinline
+               preload="none"
+             ></video>
           </div>
 
           <!-- VERTICAL CARD 2 -->
