--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="cards contactgrid">
 
           <!-- LinkedIn — replace href with your LinkedIn URL -->
-          <a class="contactcard" href="https://www.linkedin.com/in/YOUR-USERNAME" target="_blank">
+          <a class="contactcard" href="https://www.linkedin.com/in/linkedin.com/in/harshit-jain-133809383" target="_blank">
             <div class="icon linkedin">in</div>
             <div>
               <p class="cname">Harshit Jain</p>
@@ -314,7 +314,7 @@
           </a>
 
           <!-- WhatsApp — replace 91XXXXXXXXXX with your number -->
-          <a class="contactcard" href="https://wa.me/91XXXXXXXXXX" target="_blank">
+          <a class="contactcard" href="https://wa.me/919399818882" target="_blank">
             <div class="icon whatsapp">wa</div>
             <div>
               <p class="cname">Harshit Jain</p>
