--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="cards contactgrid">
 
           <!-- LinkedIn — replace href with your LinkedIn URL -->
-          <a class="contactcard" href="https://www.linkedin.com/in/linkedin.com/in/harshit-jain-133809383/" target="_blank">
+          <a class="contactcard" href="https://www.linkedin.com/in/harshit-jain-133809383/" target="_blank">
             <div class="icon linkedin">in</div>
             <div>
               <p class="cname">Harshit Jain</p>
