--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- ============================================================
          RIGHT CONTENT — All your portfolio sections go here
          To ADD a new section: copy any "section block" below and paste it
-         To REMOVE a section: delete the entire <!-- SECTION --> block
+         To REMOVE a section: delete the entire <!-- SECTION -->
     ============================================================ -->
     <section class="right">
 
