--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
           <!-- Instagram — replace with your Instagram URL -->
           <a class="contactcard" href="https://instagram.com/harshit_yati7" target="_blank">
-            <div class="icon instagram">ig</div>
+            <div class="icon"><img src="assets/instagram-icon.png" style="width:100%;height:100%;border-radius:14px;"></div>
             <div>
               <p class="cname">harshit_yati7</p>
               <p class="csub">Instagram</p>
