--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
           <!-- WhatsApp — replace 91XXXXXXXXXX with your number -->
           <a class="contactcard" href="https://wa.me/919399818882" target="_blank">
-            <div class="icon whatsapp">wa</div>
+            <div class="icon"><img src="assets/whatsapp-icon.png" style="width:100%;height:100%;border-radius:14px;"></div>
             <div>
               <p class="cname">Harshit Jain</p>
               <p class="csub">WhatsApp</p>
