--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
           <!-- LinkedIn — replace href with your LinkedIn URL -->
           <a class="contactcard" href="https://www.linkedin.com/in/harshit-jain-133809383/" target="_blank">
-            <div class="icon linkedin">in</div>
+            <div class="icon"><img src="assets/linkedin-icon.png" style="width:100%;height:100%;border-radius:14px;"></div>
             <div>
               <p class="cname">Harshit Jain</p>
               <p class="csub">linkedin.com</p>
