--- a/index.html
+++ b/index.html
@@ -112,6 +112,36 @@
       </div>
       <!-- END SECTION 2 -->
 
+       <div class="section">
+        <h2 class="title">Reels</h2>
+
+        <div class="cards two">
+
+          <!-- VERTICAL CARD 1 -->
+          <div class="card vertical">
+            <video
+              src="assets/Reel-1.mp4"
+              poster="assets/Reel-1-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
+          </div>
+
+          <!-- VERTICAL CARD 2 -->
+          <div class="card vertical">
+            <video
+              src="assets/Reel-2.mp4"
+              poster="assets/Reel-2-thumb.jpg"
+              controls
+              playsinline
+              preload="none"
+            ></video>
+          </div>
+
+        </div>
+      </div>
+
 
       <!-- ══════════════════════════════════════════════════════════
            SECTION 3 — Logo Animations
