--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 Upload a thumbnail jpg and replace assets/thumbs/YOUR-THUMB.jpg
       ══════════════════════════════════════════════════════════ -->
       <div class="section">
-        <h2 class="title">Premium & Clean Motion Graphics</h2>
+        <h2 class="title" style="background-image:url('assets/title-bg-1.png'); background-size:100% 100%; background-repeat:no-repeat; color:#fff; padding:12px 32px; display:inline-block;">Premium & Clean Motion Graphics</h2>
 
         <div class="cards two">
 
