--- a/index.html
+++ b/index.html
@@ -361,9 +361,13 @@
           </a>
 
           <!-- Location card — change the city if needed -->
-          <div class="contactcard locationcard">
-            <p class="location-text">📍 Indore, India</p>
-          </div>
+          <a class="contactcard" href="tel:+919399818882" target="_blank">
+            <div class="icon"><img src="assets/call-icon.png" style="width:100%;height:100%;border-radius:14px;"></div>
+            <div>
+              <p class="cname">Harshit Jain</p>
+              <p class="csub">Call Me</p>
+            </div>
+          </a>
 
         </div>
       </div>
